MySQL integration added