@@ -26,7 +26,13 @@
         <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
         <maven.asembly.plugin.version>3.6.0</maven.asembly.plugin.version>
         <spring-boot-starter-test.version>3.3.3</spring-boot-starter-test.version>
-        <maven.javadoc.plugin.version>3.8.0</maven.javadoc.plugin.version>
+        <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
+        <slf4j-api.version>2.0.16</slf4j-api.version>
+        <guava.version>33.2.1-jre</guava.version>
+        <evo-inflector.version>1.3</evo-inflector.version>
+        <jdbi3-core.version>3.45.4</jdbi3-core.version>
+        <mysql.version>1.20.0</mysql.version>
+        <jdbi3.testcontainers.version>3.45.4</jdbi3.testcontainers.version>
     </properties>
 
      <dependencyManagement>
@@ -85,6 +91,55 @@
                  <artifactId>spring-boot-starter-test</artifactId>
                  <version>${spring-boot-starter-test.version}</version>
              </dependency>
+             <dependency>
+                 <groupId>mysql</groupId>
+                 <artifactId>mysql-connector-java</artifactId>
+                 <version>${mysql-connector-java.version}</version>
+             </dependency>
+             <dependency>
+                 <groupId>org.slf4j</groupId>
+                 <artifactId>slf4j-api</artifactId>
+                 <version>${slf4j-api.version}</version>
+             </dependency>
+             <dependency>
+                 <groupId>org.slf4j</groupId>
+                 <artifactId>slf4j-log4j12</artifactId>
+                 <version>${slf4j-api.version}</version>
+             </dependency>
+             <dependency>
+                 <groupId>com.google.guava</groupId>
+                 <artifactId>guava</artifactId>
+                 <version>${guava.version}</version>
+             </dependency>
+             <dependency>
+                 <groupId>org.atteo</groupId>
+                 <artifactId>evo-inflector</artifactId>
+                 <version>${evo-inflector.version}</version>
+             </dependency>
+             <dependency>
+                 <groupId>org.jdbi</groupId>
+                 <artifactId>jdbi3-core</artifactId>
+                 <version>${jdbi3-core.version}</version>
+             </dependency>
+             <dependency>
+                 <groupId>org.testcontainers</groupId>
+                 <artifactId>mysql</artifactId>
+                 <version>${mysql.version}</version>
+                 <scope>test</scope>
+             </dependency>
+             <dependency>
+                 <groupId>org.jdbi</groupId>
+                 <artifactId>jdbi3-testcontainers</artifactId>
+                 <version>${jdbi3.testcontainers.version}</version>
+                 <scope>test</scope>
+             </dependency>
+             <dependency>
+                 <groupId>org.jdbi</groupId>
+                 <artifactId>jdbi3-testing</artifactId>
+                 <version>${jdbi3.testcontainers.version}</version>
+                 <scope>test</scope>
+             </dependency>
+
          </dependencies>
      </dependencyManagement>
     <dependencies>
@@ -131,8 +186,43 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.atteo</groupId>
+            <artifactId>evo-inflector</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jdbi</groupId>
+            <artifactId>jdbi3-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mysql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jdbi</groupId>
+            <artifactId>jdbi3-testcontainers</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jdbi</groupId>
+            <artifactId>jdbi3-testing</artifactId>
+        </dependency>
     </dependencies>
-
     <build>
         <pluginManagement>
             <plugins>
@@ -236,18 +326,6 @@
                         </execution>
                     </executions>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>${maven.javadoc.plugin.version}</version>
-                    <configuration>
-                        <sourcepath>src/main/java</sourcepath>
-                        <subpackages>com.app</subpackages>
-                        <additionalOptions>
-                            <option>--enable-preview</option>
-                        </additionalOptions>
-                    </configuration>
-                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -265,10 +343,6 @@
             </plugin>
             <plugin><groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId></plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-            </plugin>
         </plugins>
     </build>
 </project>
